examples/basic/invalid/invalid_lexical_2.scm
; Erro léxico: string não fechada (falta a aspa final)
(define mensagem "olá mundo)
(display mensagem)
